Fixed long titles in blog-nav on narrow screens, overlapping the text

--- a/a/sass/modules/blog-nav.sass
+++ b/a/sass/modules/blog-nav.sass
@@ -44,7 +44,7 @@
   font-weight: 400
   color: black
   text-decoration: none
-  width: 25%
+  width: 30%
   background: rgba(87,55,29,0.4)
   +rem(padding, 20px)
   +transition-property(background)
@@ -52,7 +52,10 @@
   z-index: 3
   +rem(font-size, 20px)
   +rem(line-height, 24px)
-
+  +breakpoint(min-width $medium-wide-width)
+    width: 25%
+  
+  
 .is-fits-blog-nav-large
   .blog-nav-previous, .blog-nav-next
     +rem(padding, 30px)
